# sigil

./: .gitignore  Cargo.toml  README.md  sigil.map.toml
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs
crates/sigil-cli/tests/: act_descriptor_port.rs  align_as_parity.rs  animate_port.rs  bg_anim_port.rs  bg_port.rs  camera_port.rs  collision_lookup_port.rs  collision_port.rs  contract_closure_corpus.rs  controllers_port.rs  core_negative_probes.rs  core_port.rs  crate_graph.rs  dac_bank_acceptance.rs  dac_port.rs  deny_todo.rs  diag_assert_vector.rs  dma_queue_port.rs  dplc_negative_probes.rs  dplc_port.rs  end_to_end.rs  entity_window_port.rs  game_loop_port.rs  hblank_negative_probes.rs  hblank_port.rs  here_relaxation_fix.rs  jbra_relaxation.rs  load_art_port.rs  load_object_port.rs  math_port.rs  module_resolution.rs  movem_restore_guard_corpus.rs  mt_dual_carrier.rs  mt_negative_probes.rs  mt_port.rs  objdef_port.rs  out_verify_corpus.rs  parallax_port.rs  parcel_8b_stage_gen_touchers.rs  particle_anims_port.rs  (+35 more)
crates/sigil-cli/tests/vectors/: defines.emp  missing_embed.emp  prog.emp
crates/sigil-cli/tests/vectors/ports/: sfx_33.asm  song_drumtest.asm  song_drumtest.emp
crates/sigil-frontend-emp/: Cargo.toml
crates/sigil-frontend-emp/src/: ast.rs  branch_const.rs  calls.rs  closure.rs  corpus_contracts.rs  eval.rs  flag_check.rs  layout.rs  lexer.rs  lib.rs  out_verify.rs  parser.rs  preserves.rs  type_slice.rs  value.rs  z80_bus.rs
crates/sigil-frontend-emp/src/eval/: asm.rs  builtins.rs  call.rs  classic_compress.rs  compress_common.rs  control.rs  diag.rs  emit.rs  env.rs  expr.rs  float_ns.rs  guards.rs  literals.rs  mod.rs  pattern.rs  s4lz.rs  sandbox.rs  typed.rs
crates/sigil-frontend-emp/src/lower/: code.rs  data.rs  hygiene.rs  mod.rs  patch.rs  proc.rs  script.rs
crates/sigil-frontend-emp/src/resolve/: imports.rs  manifest.rs  mod.rs  rename.rs
crates/sigil-frontend-emp/tests/: align.rs  asm_comptime_if.rs  asm_splice.rs  banks.rs  bare_calls.rs  branch_const.rs  calls.rs  classic_compress.rs  comptime_test.rs  contract_closure.rs  contract_grammar.rs  corpus.rs  corpus_contracts.rs  corpus_p5.rs  corpus_typeenv.rs  data_indexing.rs  dead_save.rs  dead_save_corpus.rs  diag_construct.rs  diag_desugar.rs  disp_sym_ind.rs  dispatch.rs  doc_comments.rs  equ_hygiene.rs  equ_link.rs  eval_bitfields.rs  eval_builtins.rs  eval_code.rs  eval_consts.rs  eval_control_flow.rs  eval_corpus.rs  eval_data.rs  eval_exprs.rs  eval_fns.rs  eval_guards.rs  eval_layout.rs  eval_match.rs  eval_offsets.rs  eval_typed.rs  eval_types.rs  (+46 more)
crates/sigil-frontend-emp/tests/vectors/: import_bad_format.txt  import_datetime.toml  import_fixture.json  import_fixture.toml  import_malformed.json  import_types.json  point.json  point_extra.json  zx0_pipeline_input.zx0
crates/sigil-harness/: Cargo.toml  harness_root.asm  m1c_root.asm  repin.toml
crates/sigil-harness/examples/: diff_s4_debug.rs  emit_s4_rom.rs  m1c_full.rs  m1c_rom.rs
crates/sigil-harness/golden/: PROVENANCE.md  stub-syms.toml  windows.toml
crates/sigil-harness/src/: lib.rs  pins.rs  repin.rs  test_support.rs
crates/sigil-harness/tests/: m0_regions.rs  m1b_gate.rs  m1c_vector_table.rs  m1d_debug_rom.rs  m1d_rom.rs  mixed_dac_rom.rs  repin_pins.rs
crates/sigil-link/: Cargo.toml
crates/sigil-link/src/: lib.rs  listing.rs  map_load.rs  relax.rs
crates/sigil-link/tests/: final_placement.rs  two_section_ab.rs
(+374 files in other folders)
