[workspace]
resolver = "2"
members = [
    "crates/sigil-isa",
    "crates/sigil-span",
    "crates/sigil-ir",
    "crates/sigil-backend-z80",
    "crates/sigil-backend-m68k",
    "crates/sigil-link",
    "crates/sigil-frontend-as",
    "crates/sigil-frontend-emp",
    "crates/sigil-cli",
    "crates/sigil-harness",
    "crates/sigil-salvador-sys",
]
