[package]
name = "sigil-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
sigil-frontend-as = { path = "../sigil-frontend-as" }
sigil-frontend-emp = { path = "../sigil-frontend-emp" }
sigil-harness = { path = "../sigil-harness" }
sigil-ir = { path = "../sigil-ir" }
sigil-link = { path = "../sigil-link" }
sigil-span = { path = "../sigil-span" }
