[package]
name = "sigil-frontend-emp"
version = "0.1.0"
edition = "2021"

[dependencies]
sigil-span = { path = "../sigil-span" }
sigil-ir = { path = "../sigil-ir" }
sigil-backend-z80 = { path = "../sigil-backend-z80" }
sigil-backend-m68k = { path = "../sigil-backend-m68k" }
sha2 = "0.10"

[dev-dependencies]
sigil-link = { path = "../sigil-link" }
