[package]
name = "sigil-link"
version = "0.1.0"
edition = "2021"

[dependencies]
sigil-ir = { path = "../sigil-ir" }
sigil-span = { path = "../sigil-span" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
sigil-backend-z80 = { path = "../sigil-backend-z80" }
sigil-isa = { path = "../sigil-isa" }
